container with fixed height and custom scrollbars

--- a/less/main.less
+++ b/less/main.less
@@ -45,6 +45,17 @@ body{
    margin-bottom: 100px;
 }
 
+.right{
+  overflow: scroll;
+  height: 430px;
+}
+
+.main-content ::-webkit-scrollbar{width:9px;height:0px;}
+.main-content ::-webkit-scrollbar-button:start:decrement,.main-content ::-webkit-scrollbar-button:end:increment{display:block;height:0;background-color:transparent;}
+.main-content ::-webkit-scrollbar-track-piece{background-color:#FAFAFA;-webkit-border-radius:0;-webkit-border-bottom-right-radius:8px;-webkit-border-bottom-left-radius:8px;}
+.main-content ::-webkit-scrollbar-thumb:vertical{height:50px;background-color:#999;-webkit-border-radius:8px;}
+.main-content ::-webkit-scrollbar-thumb:horizontal{width:10px;background-color:#fff;-webkit-border-radius:8px;}
+
 .articles-bottom{
   margin-bottom: 20px;
 }
@@ -157,7 +168,7 @@ body{
   padding-left: 0;
   li{
     list-style: none;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   a{
     color: #449471;
@@ -168,7 +179,10 @@ body{
       text-decoration: none;
     }
   }
-
+  .project-title{
+    width: 92%;
+    display: -webkit-inline-box;
+  }
   .delete{
     color: #b6222c;
     font-size: 14px;
